Fixing issue with toList()